...
                                <rect key="frame" x="86" y="419" width="202" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="bedtimeInputButton"/>
                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="22"/>
                                <state key="normal" title="起床・就寝時刻入力"/>
...
                                <rect key="frame" x="79" y="571" width="217" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="bedtimePlanButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                <state key="normal" title="起床・就寝予定設定"/>
...
                                <rect key="frame" x="108" y="495" width="159" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="sleepDebtDisplayButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                <state key="normal" title="睡眠負債表示"/>
...
                                </date>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="AccessibilityIdentifier" value="bedtimeDatePicker"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                                <rect key="frame" x="204" y="350" width="93" height="28"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="wakeTimeLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                <nil key="textColor"/>
...
                                <rect key="frame" x="100" y="605" width="46" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="backToTopFromBedtimeInput"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Back"/>
...
                                <rect key="frame" x="235" y="605" width="30" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="bedtimeSetButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                <state key="normal" title="Set"/>
...
                                <rect key="frame" x="75" y="350" width="96" height="28"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="timeOfSleepLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                <nil key="textColor"/>
...
                                <rect key="frame" x="50" y="84" width="275" height="32"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="bedtimeInputViewLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                <nil key="textColor"/>
...
                                <rect key="frame" x="111" y="20" width="152" height="21"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="sleepDebtViewLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                <nil key="textColor"/>
...
                                <rect key="frame" x="100" y="605" width="56" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="backToTopFromSleepDebtButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Back"/>
...
                                <rect key="frame" x="16" y="91" width="115" height="21"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="sleepStateLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                <nil key="textColor"/>
...
                                <rect key="frame" x="23" y="143" width="108" height="21"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="sleepDebtLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                <nil key="textColor"/>
...
                                <rect key="frame" x="278" y="143" width="35" height="21"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="sleepDebtUnitLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                <nil key="textColor"/>
...
                                <rect key="frame" x="186" y="143" width="64" height="21"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="sleepDebtValueLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                <nil key="textColor"/>
...
                                <rect key="frame" x="186" y="91" width="58" height="21"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="sleepStateValueLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                <nil key="textColor"/>
...
                                <rect key="frame" x="215" y="605" width="51" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="resetSleepDebtButton"/>
